SLCORE-907 Skip BOM when reading file from disk